--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   arcore_flutter_plugin: ^0.0.11
+  arkit_plugin: ^1.0.5
+  meta: ^1.7.0
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
