--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.3.3
   flutter_dotenv: ^5.0.2
   google_fonts: ^2.1.0
+  intl: ^0.17.0
 
 
 
@@ -55,8 +56,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/fox_face_mesh_texture.png
-    - assets/green_check_mesh_texture.png
+    - assets/Textures/fox_face_mesh_texture.png
+    - assets/Textures/green_check_mesh_texture.png
+    - assets/Textures/green_logo_mesh_texture.png
+    - assets/Textures/yellow_logo_mesh_texture.png
+    - assets/Textures/red_logo_mesh_texture.png
+    - assets/Images/oski_bear.jpg
     - .env
 
 
